add returning photos and repair param
